--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021">
     <meta property="og:description" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021 di Hotel Santika, Yudanegara Tasikmalaya">
     <meta property="og:locale" content="id_ID" />
+    <meta property="og:image" content="image/sherly-daeng-wedding-thumbnail.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <!-- Bulma Version 0.8.x-->
