--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Undangan Pernikahan Hendi & Santia</title>
 
     <meta property="og:title" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021">
-    <meta property="og:description" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021 di Hotel Santika, Yudanegara Tasikmalaya">
+    <meta property="og:description" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021 di Hotel Santika, Yudanegara Tasikmalay">
     <meta property="og:locale" content="id_ID" />
-    <meta property="og:image" content="https://rizkiabdurohman.github.io/hendisantia/image/hendi-santia-wedding-thumbnail.png">
+    <meta property="og:image" content="image/hendi-santia-wedding-thumbnail.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <!-- Bulma Version 0.8.x-->
