--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Undangan Pernikahan Hendi & Santia</title>
 
     <meta property="og:title" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021">
-    <meta property="og:description" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021 di Hotel Santika, Yudanegara Tasikmalay">
+    <meta property="og:description" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021 di Hotel Santika, Yudanegara Tasikmalaya">
     <meta property="og:locale" content="id_ID" />
     <meta property="og:image" content="image/hendi-santia-wedding-thumbnail.png">
 
