--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </div>
               <div class="navbar-item">
                 <a class="navbar-item" href="#rsvp">
-                  RSV
+                  RSVP
                 </a>
               </div>
             </div>
