--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <div data-aos="fade-up" data-aos-easing="linear">
           <div class="nama-lengkap" >
-          Rizki Abdul Rahman, S.Kom.
+          Hendi Ramdan Winata, S.Kom.
           </div>
           <p class="bodytext" data-aos="fade-up" data-aos-easing="linear">
            <!-- Putra pertama dari pasangan Bapak & Ibu-->
