--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021">
     <meta property="og:description" content="Undangan Pernikahan Hendi & Santia - Minggu, 31 Januari 2021 di Hotel Santika, Yudanegara Tasikmalaya">
     <meta property="og:locale" content="id_ID" />
-    <meta property="og:image" content="image/hendi-santia-wedding-thumbnail.png">
-    <meta property="og:url" content="index.html">
+    <meta property="og:image" content="https://rizkiabdurohman.github.io/hendisantia/image/hendi-santia-wedding-thumbnail.png">
+    <meta property="og:url" content="https://rizkiabdurohman.github.io/hendisantia/index.html">
     <meta name="twitter:card" content="summary_large_image">
     <!-- Bulma Version 0.8.x-->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
